try to run unittests

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ virtualenv:
     system_site_package: true
 before_install:
  - sudo apt-get update
- - sudo apt-get install -qq python3-numpy python3-matplotlib
+ - sudo apt-get install -qq python3-numpy
 script:
-  - if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then python3 example1.py; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then python -m unittest discover; fi
 
 notifications:
   email:
