--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@
 #   http://lint.travis-ci.org/
 language: python
 sudo: required
-dist: trusty
+dist: bionic
 
 python:
-  - 3.6
+  - 3.7
 virtualenv:
     system_site_package: true
 before_install:
