--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ virtualenv:
     system_site_package: true
 before_install:
  - sudo apt-get update
- - sudo apt-get install -qq g++ freetype-dev
+ - sudo apt-get install -qq g++ libfreetype6-dev
  - sudo pip install -r requirements.txt
 script:
   - python -m example1_test.py
