--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
  - sudo apt-get install -qq g++ libfreetype6-dev
  - sudo pip install -r requirements.txt
 script:
-  - python -m example1_test.py
+  - python example1_test.py
 
 notifications:
   email:
