--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
  - sudo apt-get install -qq g++ libfreetype6-dev
  - sudo pip install -r requirements.txt
 script:
-  - python example1_test.py
+  - python -m unittest discover -p "*_test.py"
 
 notifications:
   email:
