fix conda, paths, style

--- a/environment.yml
+++ b/environment.yml
@@ -6,4 +6,6 @@ dependencies:
   - numpy
   - matplotlib
   - pandas
+  - pip:
+      - python-dotenv
 prefix: /home/daniel/anaconda3/envs/backpropagation
